// Copyright 2022 Namespace Labs Inc; All rights reserved.
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.

syntax = "proto3";

package foundation.schema;

option go_package = "namespacelabs.dev/foundation/schema";

import "schema/definition.proto";
import "schema/environment.proto";
import "schema/stack.proto";
import "schema/networking.proto";
import "schema/workspace.proto";

// Next ID: 11
message DeployPlan {
    Workspace                workspace           = 8;
    Environment              environment         = 7;
    Stack                    stack               = 1;
    repeated string          focus_server        = 9;
    repeated IngressFragment ingress_fragment    = 4;
    SerializedProgram        program             = 6;
    string                   namespace_reference = 10;

    reserved 2, 3, 5;
}
